package com.kelvin.filme_note.dto.auth;

public  class LoginRequest {
    public String emailOrName;
    public String password;
}
